@@ -1,4 +1,4 @@
-# auto-generated by [perl_audit_test.sh] on [Sun, Dec 18, 2022 12:14:17 AM]
+# auto-generated by [perl_audit_test.sh] on [Tue, Dec 20, 2022  7:06:58 AM]
 # audit results for [Batch-Exec-Path / Batch::Exec::Path / Path.pm]:
 incl:	Carp          
 incl:	Data::Dumper  
@@ -13,22 +13,27 @@ attr:	autoheader    	UNDOCUMENTED	UNTESTED
 attr:	behaviour     	documented	tested: ./t/00_basic.t ./t/01_primitive.t
 attr:	cmd_os_version	UNDOCUMENTED	UNTESTED
 attr:	cmd_os_where  	UNDOCUMENTED	UNTESTED
+meth:	connector     	documented	UNTESTED
 meth:	default       	documented	UNTESTED
 attr:	deu           	UNDOCUMENTED	UNTESTED
 attr:	dew           	UNDOCUMENTED	UNTESTED
 attr:	dn_start      	UNDOCUMENTED	tested: ./t/00_basic.t
 attr:	drive         	UNDOCUMENTED	tested: ./t/01_primitive.t ./t/02_parse.t
 meth:	drive_letter  	documented	tested: ./t/01_primitive.t
+meth:	dump_struct   	documented	UNTESTED
 attr:	echo          	UNDOCUMENTED	UNTESTED
 meth:	extant        	documented	tested: ./t/00_basic.t
 attr:	fatal         	UNDOCUMENTED	UNTESTED
 attr:	folders       	UNDOCUMENTED	tested: ./t/02_parse.t
-meth:	home          	documented	tested: ./t/00_basic.t
+meth:	home          	documented	tested: ./t/00_basic.t ./t/02_parse.t
 attr:	homed         	UNDOCUMENTED	tested: ./t/02_parse.t
+attr:	hybrid        	UNDOCUMENTED	tested: ./t/02_parse.t
+meth:	is_known      	documented	UNTESTED
 meth:	joiner        	documented	tested: ./t/03_joiner.t
-attr:	letter        	UNDOCUMENTED	tested: ./t/01_primitive.t ./t/02_parse.t
+attr:	letter        	UNDOCUMENTED	tested: ./t/02_parse.t
 meth:	lexer         	documented	UNTESTED
-attr:	log           	UNDOCUMENTED	UNTESTED
+attr:	log           	UNDOCUMENTED	tested: ./t/00_basic.t
+attr:	mount         	UNDOCUMENTED	UNTESTED
 attr:	msg           	UNDOCUMENTED	UNTESTED
 meth:	parse         	documented	tested: ./t/02_parse.t ./t/03_joiner.t
 attr:	pn_issue      	UNDOCUMENTED	UNTESTED
@@ -40,15 +45,19 @@ attr:	res           	UNDOCUMENTED	UNTESTED
 attr:	reu           	UNDOCUMENTED	UNTESTED
 attr:	rew           	UNDOCUMENTED	UNTESTED
 attr:	root          	UNDOCUMENTED	UNTESTED
+meth:	separator     	documented	UNTESTED
 attr:	server        	UNDOCUMENTED	tested: ./t/01_primitive.t ./t/02_parse.t
 attr:	shellify      	documented	tested: ./t/01_primitive.t
 meth:	slash         	documented	tested: ./t/01_primitive.t
 attr:	stdfd         	UNDOCUMENTED	UNTESTED
 meth:	tld           	documented	tested: ./t/01_primitive.t ./t/04_other.t
-attr:	type          	UNDOCUMENTED	tested: ./t/01_primitive.t ./t/02_parse.t
+attr:	type          	UNDOCUMENTED	tested: ./t/01_primitive.t ./t/02_parse.t ./t/03_joiner.t
 attr:	unc           	UNDOCUMENTED	tested: ./t/01_primitive.t ./t/02_parse.t
 attr:	unknown       	UNDOCUMENTED	UNTESTED
 meth:	volume        	documented	tested: ./t/01_primitive.t ./t/02_parse.t
+attr:	volumes       	UNDOCUMENTED	tested: ./t/02_parse.t
+meth:	winuser       	documented	UNTESTED
 attr:	wsl_active    	UNDOCUMENTED	tested: ./t/04_other.t
+attr:	wsl_env       	UNDOCUMENTED	UNTESTED
 meth:	wslhome       	documented	tested: ./t/04_other.t
 meth:	wslroot       	documented	tested: ./t/04_other.t
