@@ -1,3 +1,3 @@
 IDE_PACKAGE: Batch-Exec-Path
-IDE_VERSION: $Revision: 1.1 $
+IDE_VERSION: $Revision: 1.2 $
 IDE_DATE: 20220605
