@@ -3,19 +3,15 @@ Changes
 IDE_VERSION
 LICENSE
 MANIFEST
-MYMETA.json
-MYMETA.yml
-Makefile
 Makefile.PL
 README
 README.md
 lib/Batch/Exec/Path.pm
 path_scenarios.xlsx
-pm_to_blib
 t/00_basic.t
 t/01_primitive.t
-t/02split.t
-t/03volume.t
-t/04other.t
+t/02_parse.t
+t/03_joiner.t
+t/04_other.t
 t/Harness.pm
 t/harness.t
